Fixed mobile responsiveness on legal pages and made navbar expanding/collapsing responsive to menu items

--- a/css/common.css
+++ b/css/common.css
@@ -472,6 +472,7 @@ ul.product-info-list li {
     }
 
     #navbar .links {
+        height: auto;
         text-align: right;
     }
 
